--- a/form_game.css
+++ b/form_game.css
@@ -10,8 +10,8 @@
     grid-template-columns: 1fr 1fr;
 }
   body{
-    height : 100vh;
-    width : 99%;
+    height : 98%;
+    width : 98%;
     background-image: url("./image/5.jpg");
     background-repeat: no-repeat;
     background-size: cover;
