--- a/form_game.css
+++ b/form_game.css
@@ -15,6 +15,7 @@ nav{
     background-image: url("./image/5.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     opacity: 1;
     overflow:hidden;
 }
